# mbf-io

./: README.md  conda_mbfio.yaml  setup.cfg
examples/: example_contours.asc  example_stereology.txt  example_stereology.xml  plot_stereo.ipynb
mbfio/: __init__.py  asc.py  contours_asc.py  contours_xml.py  contours_xml_old.py  markers_txt.py  mbf.10.xsd  mbf.11.xsd  polygons.py  txt.py  utils.py  xml.py  xml_base.py
