[metadata]
name = mbf-io
description = IO tools for MicroBrightField formats
long_description = file:README.md
author = Yael Balbastre
author_email = ybalbastre@mgh.harvard.edu

[options]
python_requires = >= 3.6
install_requires =
    xmlschema
    numpy

[options.extra_requires]
all =
    jitfields
    torch
    cppyy

[options.package_data]
* = *.xsd
